--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <canvas width="1880" height="1000" id="canvas"></canvas>
 <script src="asteroids.js"></script>
-<script src="keymaster.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/keymaster/1.6.1/keymaster.min.js"></script>
 <script>
 var canvasEl = document.getElementById('canvas');
 var ctx = canvasEl.getContext("2d");
