--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
-<canvas width="1880" height="1000" id="canvas"></canvas>
-<script src="./asteroids.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/keymaster/1.6.1/keymaster.min.js"></script>
-<script>
-var canvasEl = document.getElementById('canvas');
-var ctx = canvasEl.getContext("2d");
-var game = new Game(10, canvas);
-game.start(ctx);
-</script>
-
+  <canvas id="canvas"></canvas>
+  <script src="https://cdn.rawgit.com/yoannmoinet/nipplejs/master/dist/nipplejs.min.js"></script>
+  <script src="./asteroids.js"></script>
+  <script>
+    const game = new Asteroids(10, 'canvas');
+    game.start();
+  </script>
 </body>
+
 </html>
