--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <div id="control" style="position: absolute; bottom: 100px; right: 100px"></div>
+  <canvas id="canvas" style="position: absolute;"></canvas>
   <script src="https://cdn.rawgit.com/yoannmoinet/nipplejs/master/dist/nipplejs.min.js"></script>
   <script src="./asteroids.js"></script>
   <script>
