--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <div id="control" style="position: absolute; bottom: 100px; right: 100px"></div>
   <canvas id="canvas" style="position: absolute;"></canvas>
-  <script src="https://cdn.rawgit.com/yoannmoinet/nipplejs/master/dist/nipplejs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.10.2/nipplejs.min.js" integrity="sha512-sUnIEQH0OU2+TxkJnubDC9KJBCeeh0RjvFhvsFx1sOTN5rfhIJ0ESgg/YH0NHgByCOin+zBTJFL+nEL0llyGLQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./asteroids.js"></script>
   <script>
     const game = new Asteroids(10, 'canvas');
