--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+  </style>
 </head>
 <body>
-  <div id="control" style="position: absolute; bottom: 100px; right: 100px"></div>
+  <div class="noselect" style="position: absolute; bottom: 100px; right: 100px">
+  <div id="control" ></div></div>
   <canvas id="canvas" style="position: absolute;"></canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.10.2/nipplejs.min.js" integrity="sha512-sUnIEQH0OU2+TxkJnubDC9KJBCeeh0RjvFhvsFx1sOTN5rfhIJ0ESgg/YH0NHgByCOin+zBTJFL+nEL0llyGLQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./asteroids.js"></script>
